MODON MRE BPDEV/force-app/main/default/objects/SalesLaunchNotification__c/SalesLaunchNotification__c.object-meta.xml
<CustomObject>
    <label>SalesLaunchNotification</label>
    <nameField>
        <displayFormat>SLN-{0000000}</displayFormat>
        <label>SalesLaunchNotification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesLaunchNotification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>