MODON MRE BPDEV/force-app/main/default/objects/SalesLaunchNotification__c/fields/PersonEmail__c.field-meta.xml
<CustomField>
    <fullName>PersonEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonEmail</label>
    <type>Email</type>
</CustomField>