MODON MRE BPDEV/force-app/main/default/objects/SalesLaunchNotification__c/fields/PersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonMobilePhone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>